Changing nameHeader for sections

--- a/includes.tex
+++ b/includes.tex
@@ -50,7 +50,7 @@
 \newcommand{\lcourseCode}[1]{Course Code: #1}
 
 \newcommand{\nameHeader}[0]{\pagestyle{fancy}
-\rhead{\name\\ \cid}}
+\rhead{\name\\ \cid} \lhead{\leftmark}}
 \newcommand{\courseHeader}[1]{\nameHeader
 \lhead{\lcourseCode{#1}}}
 \newcommand{\degreeHeader}[1]{\nameHeader
