--- a/includes.tex
+++ b/includes.tex
@@ -34,7 +34,7 @@
 
 \fancypagestyle{firstPageStyle}
 {
-   \fancyhf{}
+   \fancyhf{} % Clears any current format
    \nameHeader
 	 \cfoot{\thepage} % Page No. center
 
