Added import as comment

--- a/includes.tex
+++ b/includes.tex
@@ -1,3 +1,6 @@
+% \input{includes.tex}
+% Used to import includes
+
 \usepackage{enumitem}% http://ctan.org/pkg/enumitem
 \newcommand{\nItem}[0]{\newpage \item}
 
