--- a/includes.tex
+++ b/includes.tex
@@ -35,6 +35,8 @@
 \usepackage{fullpage}
 \usepackage{fixltx2e} % Normal text sub and super scripts
 \usepackage{minted} % Copy and paste code in
+% \begin{minted}[mathescape, linenos]{python}
+% \end{minted}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -49,6 +51,9 @@
    \cfoot{\thepage} % Page No. center
 
 } % Used to set style of first page
+
+% \thispagestyle{firstPageStyle}
+% Place on first page
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
