--- a/includes.tex
+++ b/includes.tex
@@ -1,6 +1,8 @@
 % \input{includes.tex}
 % Used to import includes
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \usepackage{enumitem}% http://ctan.org/pkg/enumitem
 \newcommand{\nItem}[0]{\newpage \item}
 
@@ -37,6 +39,9 @@
 \usepackage{minted} % Copy and paste code in
 % \begin{minted}[mathescape, linenos]{python}
 % \end{minted}
+\usepackage{graphicx}
+%\includegraphics[width=\textwidth]{Data1Plot.png}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
