Enum usuage comments

--- a/includes.tex
+++ b/includes.tex
@@ -5,6 +5,11 @@
 
 \usepackage{enumitem}% http://ctan.org/pkg/enumitem
 \newcommand{\nItem}[0]{\newpage \item}
+% \begin{enumerate}[label = \arabic*)] % Numbers
+% \begin{enumerate}[label = \alph*)]	% Letters
+% \item
+% \end{enumerate}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
