Typo, format fix

--- a/includes.tex
+++ b/includes.tex
@@ -8,7 +8,7 @@
 \newcommand{\nitem}{\nItem}
 \newcommand{\letEnum}{\begin{enumerate}[label = \alph*)]}
 \newcommand{\numEnum}{\begin{enumerate}[label = \arabic*)]}
-\newcommand{\endEnum}{\end{enumerate}
+\newcommand{\eEnum}{\end{enumerate}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -77,8 +77,8 @@
 \newcommand{\degreeHeader}[0]{\nameHeader
 \lhead{\ldegreeCode}}
 \newcommand{\courseHeader}[1]{\nameHeader
-\lhead{\lcourseCode{#1}} \\
-\ldegreeCode}
+\lhead{\lcourseCode{#1} \\ \ldegreeCode 
+}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
