Minted file link comment

--- a/includes.tex
+++ b/includes.tex
@@ -43,6 +43,7 @@
 \usepackage{minted} % Copy and paste code in
 % \begin{minted}[mathescape, linenos]{python}
 % \end{minted}
+% \inputminted[mathescape, linenos]{python}{FILENAME.py}
 \usepackage{graphicx}
 %\includegraphics[width=\textwidth]{FILE NAME}
 
@@ -77,8 +78,7 @@
 \newcommand{\degreeHeader}[0]{\nameHeader
 \lhead{\ldegreeCode}}
 \newcommand{\courseHeader}[1]{\nameHeader
-\lhead{\lcourseCode{#1} \\ \ldegreeCode 
-}}
+\lhead{\lcourseCode{#1} \\ \ldegreeCode}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
