Adding pdfs to latex

--- a/includes.tex
+++ b/includes.tex
@@ -46,6 +46,9 @@
 % \inputminted[mathescape, linenos]{python}{FILENAME.py}
 \usepackage{graphicx}
 %\includegraphics[width=\textwidth]{FILE NAME}
+\usepackage{pdfpages}
+%\includepdf[page={page number}]{filename}
+%\includepdf[page=-]{filename}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
