Allowing page breaks

--- a/includes.tex
+++ b/includes.tex
@@ -22,6 +22,8 @@
 \newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
 \renewcommand{\thesubsection}[0]{\thesection.\alph{subsection}} % Subsections are letters
 
+\allowdisplaybreaks
+
 % Removes section numbers
 %\makeatletter
 %\renewcommand{\@seccntformat}[1]{}
