Edited the sections part

--- a/includes.tex
+++ b/includes.tex
@@ -14,18 +14,13 @@
 
 \usepackage{titlesec}
 
-\titleformat{\section}[wrap]
-{\normalfont\bfseries}
-{\thesection.}{0.5em}{}
-\titlespacing{\section}{12pc}{1.5ex plus .1ex minus .2ex}{1pc}
-
 \newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
-\renewcommand{\thesubsection}[0]{\thesection.\alph{subsection}} % Subsections are letters
+% \renewcommand{\thesubsection}[0]{\thesection.\alph{subsection}} % Subsections are letters
 
 %\allowdisplaybreaks
 
 % Removes section numbers
-%\makeatletter
+% \makeatletter
 %\renewcommand{\@seccntformat}[1]{}
 %\makeatother
 
