--- a/includes.tex
+++ b/includes.tex
@@ -86,6 +86,7 @@
 % Use \begin{theorem} ... \end{theorem}
 \newtheorem{theorem}{Theorem}[section]   % Theorem numbers relate to sections
 \newtheorem{lemma}[theorem]{Lemma}       % Lemma numbers use theorem numbers
+\newtheorem{corollary}[theorem]{Corollary}
 \newtheorem*{remark}{Remark}             % Remarks have no numbers
 \newtheorem*{definition}{Definition}     % Def's have no numbers
 
