intertext and remove section break new page

--- a/includes.tex
+++ b/includes.tex
@@ -14,7 +14,7 @@
 
 \usepackage{titlesec}
 
-\newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
+%\newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
 % \renewcommand{\thesubsection}[0]{\thesection.\alph{subsection}}
 % Subsections are letters
 
@@ -33,6 +33,9 @@
 
 \usepackage{amsfonts}
 \usepackage{amsmath}
+
+% If in \begin{align} mode, use \intertext{A comment} to add side text
+
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{cancel}
