Update midway through alg num theory

--- a/includes.tex
+++ b/includes.tex
@@ -15,7 +15,7 @@
 
 \usepackage{titlesec}
 
-% \newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
+\newcommand{\sectionbreak}[0]{\clearpage} % Section starts on a new page
 % \renewcommand{\thesubsection}[0]{\thesection.\alph{subsection}}
 % Subsections are letters
 
@@ -257,6 +257,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\half}[0]{\frac{1}{2}}
+\newcommand{\quarter}[0]{\frac{1}{4}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -283,6 +284,7 @@
 % "Phrases"
 \newcommand{\st}[0]{\text{s.t}}
 \newcommand{\sst}[0]{\ \st \ }
+\newcommand{\spst}[0]{\ \st \ }
 
 % Misc
 \newcommand{\hpi}[0]{\hat{\pi}}
@@ -294,6 +296,10 @@
 \newcommand{\mN}[0]{\mathbb{N}} % natural numbers
 \newcommand{\mQ}[0]{\mathbb{Q}} % rational numbers
 \newcommand{\mC}[0]{\mathbb{C}} % complex numbers
+
+% Rings, fields
+
+\newcommand{\mZi}[0]{\mathbb{Z}[i]}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -316,12 +322,22 @@
 % Isomorphism
 % \cong
 
+% mod, modulo, congurent
+% \equiv
+
 % cross x
 %\times
 % dot
 %\cdot
 % divide, div (caused by physics package)
 %\divisionsymbol
+
+% plus minus, plus-minus
+% \pm
+
+% unit ring
+% \cross
+% Eg. A^{\cross}
 
 % Tends to, limit
 %\to
@@ -334,4 +350,3 @@
 
 % bold
 % \textbf{z}
-
