Bullet points comment

--- a/includes.tex
+++ b/includes.tex
@@ -11,6 +11,11 @@
 \newcommand{\numEnum}[0]{\begin{enumerate}[label = \arabic*)]}
 \newcommand{\eEnum}[0]{\end{enumerate}}
 
+% For bullet points use:
+%\begin{itemize}
+%		\item
+%\end{itemize}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{titlesec}
